# whisppr

./: .gitignore  CMakeLists.txt  Makefile  audio.c  audio_capture  audio_capture.c  flake.nix  meson.build  test1  tut1.c  tut1.cpp  tut2  tut2.c  tutorial1
.github/workflows/: nix.yml
builds/: .ninja_deps  .ninja_log  CMakeCache.txt  audio_capture  build.ninja  cmake_install.cmake
src/: audio_capture.cpp
